--- a/b/bi/bic/bicycling.com.html
+++ b/b/bi/bic/bicycling.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the bicycling.com privacy policy that was archived on 2013-10-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131031095847id_/http%3A//www.rodale.com/corp/sub/0%2C%2C1-28%2C00.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bicycling.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214002553id_/http%3A//www.rodale.com/corp/sub/0%2C%2C1-28%2C00.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" class="js"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Your Privacy Policy | Rodale Inc</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -78,7 +78,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","thickbox":{"close":"Close","nex
  <input type="text" maxlength="128" name="search_block_form" id="edit-search-block-form-1" size="15" value="" title="Enter the terms you wish to search for." class="form-text">
 </div>
 <input type="submit" name="op" id="edit-submit" value="Search" class="form-submit submitBtn">
-<input type="hidden" name="form_build_id" id="form-07fef80486a7c8ebd52c3d4235fcd6a9" value="form-07fef80486a7c8ebd52c3d4235fcd6a9">
+<input type="hidden" name="form_build_id" id="form-49a1b83ef8245320c0997f88ed0e8297" value="form-49a1b83ef8245320c0997f88ed0e8297">
 <input type="hidden" name="form_id" id="edit-search-block-form" value="search_block_form">
 </div>
 
