--- a/p/pi/pia/piazza.com.html
+++ b/p/pi/pia/piazza.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the piazza.com privacy policy that was archived on 2013-11-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131111232036id_/https%3A//piazza.com/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the piazza.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214002824id_/https%3A//piazza.com/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
     
@@ -37,13 +37,13 @@
   <!-- ===================================================================== -->
 
   <!-- Third-Party -->
-  <link rel="stylesheet" type="text/css" href="/css/shared/lib/bootstrap/bootstrap.min.css?v=399">
+  <link rel="stylesheet" type="text/css" href="/css/shared/lib/bootstrap/bootstrap.min.css?v=507">
 <!-- https://dvngeac8rg9mb.cloudfront.net -->
 
-  <link rel="stylesheet" type="text/css" href="/css/shared/lib/bootstrap/bootstrap-responsive.min.css?v=399">
+  <link rel="stylesheet" type="text/css" href="/css/shared/lib/bootstrap/bootstrap-responsive.min.css?v=507">
 <!-- https://dvngeac8rg9mb.cloudfront.net -->
 
-  <link rel="stylesheet" type="text/css" href="/css/plugins/fancybox-1.3.4.css?v=399">
+  <link rel="stylesheet" type="text/css" href="/css/plugins/fancybox-1.3.4.css?v=507">
 <!-- https://dvngeac8rg9mb.cloudfront.net -->
 
 
@@ -52,10 +52,10 @@
   <!-- ===================================================================== -->
 
   <!-- jQuery is the one JS file we do include at the top of the page, since so much HTML-nested code requires it. -->
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/javascripts/jquery-1.7.1.min.js?v=399"></script>
+  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/javascripts/jquery-1.7.1.min.js?v=507"></script>
 <!--https://dvngeac8rg9mb.cloudfront.net-->
   
-  <link rel="stylesheet" type="text/css" href="/css/splash/splash-responsive.css?v=399">
+  <link rel="stylesheet" type="text/css" href="/css/splash/splash-responsive.css?v=507">
 <!-- https://dvngeac8rg9mb.cloudfront.net -->
 </head>
 <body>
@@ -85,7 +85,9 @@
     
 
   </div>
-</div><script>
+</div>
+
+<script>
   function submitenter(myfield,e) {
     var keycode;
     if (window.event) keycode = window.event.keyCode;
@@ -369,17 +371,18 @@ function showLogin() {
   <!-- ===================================================================== -->
 
   <!-- Third-Party -->
-  <script type="text/javascript" src="/javascripts/bootstrap.min.js?v=399"></script>
+  <script type="text/javascript" src="/javascripts/bootstrap.min.js?v=507"></script>
 <!--https://dvngeac8rg9mb.cloudfront.net-->
-  <script type="text/javascript" src="/javascripts/jquery.blockUI.js?v=399"></script>
+  <script type="text/javascript" src="/javascripts/jquery.blockUI.js?v=507"></script>
 <!--https://dvngeac8rg9mb.cloudfront.net-->
 
-  <script type="text/javascript" src="/javascripts/jquery.fancybox-1.3.4.pack.js?v=399"></script>
+  <script type="text/javascript" src="/javascripts/jquery.fancybox-1.3.4.pack.js?v=507"></script>
 <!--https://dvngeac8rg9mb.cloudfront.net-->
   <script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-21514163-1']);
+  _gaq.push(['_setDomainName', 'piazza.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -390,15 +393,14 @@ function showLogin() {
 
 </script>
 
-
   <!-- Piazza -->
-  <script type="text/javascript" src="/modules/event_manager.js?v=399"></script>
+  <script type="text/javascript" src="/modules/event_manager.js?v=507"></script>
 <!--https://dvngeac8rg9mb.cloudfront.net-->
-  <script type="text/javascript" src="/modules/helpers.js?v=399"></script>
+  <script type="text/javascript" src="/modules/helpers.js?v=507"></script>
 <!--https://dvngeac8rg9mb.cloudfront.net-->
-  <script type="text/javascript" src="/modules/ajax.js?v=399"></script>
+  <script type="text/javascript" src="/modules/ajax.js?v=507"></script>
 <!--https://dvngeac8rg9mb.cloudfront.net-->
-  <script type="text/javascript" src="/js/splash/splash.js?v=399"></script>
+  <script type="text/javascript" src="/js/splash/splash.js?v=507"></script>
 <!--https://dvngeac8rg9mb.cloudfront.net-->
   
 
