--- a/p/pi/pip/pipelinedeals.com.html
+++ b/p/pi/pip/pipelinedeals.com.html
@@ -1,11 +1,13 @@
-<!--The following is the downloaded HTML source of the pipelinedeals.com privacy policy that was archived on 2013-10-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131003154916id_/https%3A//www.pipelinedeals.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pipelinedeals.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214003948id_/https%3A//www.pipelinedeals.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head><script type="text/javascript" async="" src="https://cdn.mxpnl.com/libs/mixpanel-2.2.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"beacon-1.newrelic.com","errorBeacon":"jserror.newrelic.com","licenseKey":"32d3c3b612","applicationID":"1944961","transactionName":"JVlYFhNcD15WRxoOUxRdUxYIXQQdQ0dcFVMFTw==","queueTime":0,"applicationTime":18,"ttGuid":"","agentToken":null,"agent":"js-agent.newrelic.com/nr-314.min.js","extra":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function a(b,c,d){function e(f){if(!c[f]){var g=c[f]={exports:{}};b[f][0].call(g.exports,function(a){var c=b[f][1][a];return e(c?c:a)},g,g.exports,a,b,c,d)}return c[f].exports}for(var f=0;f<d.length;f++)e(d[f]);return e}({"4O2Y62":[function(a,b){function c(a,b){var c=d[a];return c?c.apply(this,b):(e[a]||(e[a]=[]),void e[a].push(b))}var d={},e={};b.exports=c,c.queues=e,c.handlers=d},{}],handle:[function(a,b){b.exports=a("4O2Y62")},{}],YLUGVp:[function(a,b){function c(){var a=m.info=NREUM.info;if(a&&a.agent&&a.licenseKey&&a.applicationID){m.proto="https"===l.split(":")[0]||a.sslForHttp?"https://":"http://",g("mark",["onload",f()]);var b=i.createElement("script");b.src=m.proto+a.agent,i.body.appendChild(b)}}function d(){"complete"===i.readyState&&e()}function e(){g("mark",["domContent",f()])}function f(){return(new Date).getTime()}var g=a("handle"),h=window,i=h.document,j="addEventListener",k="attachEvent",l=(""+location).split("?")[0],m=b.exports={offset:f(),origin:l};i[j]?(i[j]("DOMContentLoaded",e,!1),h[j]("load",c,!1)):(i[k]("onreadystatechange",d),h[k]("onload",c)),g("mark",["firstbyte",f()])},{handle:"4O2Y62"}],loader:[function(a,b){b.exports=a("YLUGVp")},{}]},{},["YLUGVp"]);</script>
 <meta charset="UTF-8">
 <meta content="en-US" http-equiv="Content-Language">
 <meta content="index, follow" name="robots">
+<meta content="app-id=639580181" name="apple-itunes-app">
 <title>Sales Tracking and Online CRM Privacy &amp; Security Policy for PipelineDeals</title>
 <meta content="Privacy and Security Policy for PipelineDeals the simple online CRM for tracking sales deals, contacts and leads. Only $24 per user per month. (866) 702-7303" name="description">
 <meta name="keywords">
@@ -13,17 +15,16 @@
 <meta content="yes" name="apple-mobile-web-app-capable">
 <meta content="black" name="apple-mobile-web-app-status-bar-style">
 <link href="https://www.pipelinedeals.com/privacy" rel="canonical">
-<link href="https://d2454splxac2m7.cloudfront.net/assets/new_marketing_site.css?1380810639" media="all" rel="stylesheet" type="text/css">
+<link href="https://pipelinedeals.global.ssl.fastly.net/1392317705/assets/marketing.css?1392318256" media="all" rel="stylesheet" type="text/css">
 
 <!--[if IE]>
-<link href="https://d2454splxac2m7.cloudfront.net/stylesheets/new_marketing_site/ie.css?1380210226" media="screen" rel="stylesheet" type="text/css" />
+<link href="https://pipelinedeals.global.ssl.fastly.net/1392317705/stylesheets/marketing/ie.css?1392318070" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
 <link href="/favicon.ico" rel="shortcut icon">
 <link href="/apple-touch-icon.png" rel="apple-touch-icon">
+
 <script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
-
-
-<body class="new_marketing_site privacy"><div id="olark" style="display: none;"><olark><iframe frameborder="0" id="olark-loader"></iframe></olark></div>
+<body class="marketing privacy"><div id="olark" style="display: none;"><olark><iframe frameborder="0" id="olark-loader"></iframe></olark></div>
 <div id="loading"></div>
 <div class="container-fluid header">
 <div class="row-fluid">
@@ -41,7 +42,7 @@
 <ul class="nav">
 <li><a href="https://www.pipelinedeals.com/features">Features</a></li>
 <li><a href="https://www.pipelinedeals.com/pricing">Pricing</a></li>
-<li><a href="https://www.pipelinedeals.com/support">Support</a></li>
+<li><a href="http://support.pipelinedeals.com">Support</a></li>
 <li><a href="http://blog.pipelinedeals.com">Blog</a></li>
 <li><a href="https://www.pipelinedeals.com/sign_up" class="try-it analytics-try-it">Try it free</a></li>
 </ul>
@@ -62,7 +63,7 @@
 </div>
 </div>
 
-<script src="https://d2454splxac2m7.cloudfront.net/assets/new_marketing_site_top.js?1380810582" type="text/javascript"></script>
+<script src="https://pipelinedeals.global.ssl.fastly.net/1392317705/assets/marketing_top.js?1392318235" type="text/javascript"></script>
 <div class="container-fluid wideload norm">
 <div class="row-fluid">
 <div class="span12">
@@ -72,7 +73,6 @@ Our Commitment to Privacy
 </h1>
 </div>
 <div class="span12">
-<h1></h1>
 <div class="standard">
 <div class="row-fluid">
 <div class="span12">
@@ -123,7 +123,7 @@ Our Commitment to Privacy
 <h4>Built by sales people, for sales people.</h4>
 <h2>Try PipelineDeals FREE for 30 days</h2>
 <form action="/account" autocomplete="off" class="form-inline" id="" method="post">
-<input id="account_referrer" name="account[referrer]" type="hidden" value="https://cdn.optimizely.com/js/1873046.js">
+<input id="account_referrer" name="account[referrer]" type="hidden" value="https://www.pipelinedeals.com/">
 <input id="account_users_attributes_0_is_admin_added_user" name="account[users_attributes][0][is_admin_added_user]" type="hidden" value="true">
 <span class="contain">
 <label for="account_users_attributes_0_first_name">First name</label>
@@ -157,44 +157,49 @@ Our Commitment to Privacy
 
 <div class="container-fluid footer">
 <div class="row-fluid">
+<div class="footer-storelinks span12">
+<div class="span6 text-right">
+<a href="https://itunes.apple.com/us/app/pipelinedeals-crm/id639580181" target="_blank"><img alt="PipelineDeals iOS App" src="https://pipelinedeals.global.ssl.fastly.net/1392317705/images/marketing/app-store-ios.jpg?1392318070"></a>
+</div>
+<div class="span6">
+<a href="https://play.google.com/store/apps/details?id=com.pipelinedeals" target="_blank"><img alt="PipelineDeals Android App" src="https://pipelinedeals.global.ssl.fastly.net/1392317705/images/marketing/app-store-android.jpg?1392318070"></a>
+</div>
+</div>
+</div>
+<div class="row-fluid">
 <div class="footer-inner span12">
 <div class="span4">
 <h5>Latest from the blog</h5>
 <ul class="blog">
 <li>
-<a class="" href="http://blog.pipelinedeals.com/pipelinefrontpage/2013/8/20/reports-are-moving-to-the-deals-tab">
-<span class="date">Tuesday, August 20, 2013</span>
-Reports are moving to the Deals tab
-</a>
-</li>
+<a href="http://blog.pipelinedeals.com/pipelinefrontpage/toolsfor2014"><span class="date">February 11, 2014</span>
+3 Indispensable Tools To Compliment Your CRM
+</a></li>
 <li>
-<a class="" href="http://blog.pipelinedeals.com/pipelinefrontpage/2013/8/12/new-activity-report-is-here-quickly-analyze-your-users-activities-in-list-views">
-<span class="date">Monday, August 12, 2013</span>
-New Activity Report Is Here - Quickly analyze your user's activities in list views
-</a>
-</li>
+<a href="http://blog.pipelinedeals.com/pipelinefrontpage/2014/2/6/3-pipelinedeals-enhancements-to-save-you-time"><span class="date">February  7, 2014</span>
+3 PipelineDeals Enhancements To Save You Time
+</a></li>
 <li>
-<a class="" href="http://blog.pipelinedeals.com/pipelinefrontpage/2013/6/30/enhanced-list-views-are-coming">
-<span class="date">Monday, July 1, 2013</span>
-Enhanced List Views are here!
-</a>
-</li>
+<a href="http://blog.pipelinedeals.com/pipelinefrontpage/growthhacking2014"><span class="date">January 28, 2014</span>
+Growth Hacking 2014 - Grow Your Business In 2014
+</a></li>
 </ul>
+
 </div>
 <div class="span4 tweets">
 <h5>@pipelinedeals tweets</h5>
 <ul>
 <li>
-<a href="http://twitter.com/pipelinedeals/status/385475166337114112" target="_blank">Thanks to PipelineDeals user Tracey for stopping by our Seattle office. Customers are always welcome to stop by! http://t.co/vNGp8zuCE4</a>
+<a href="http://twitter.com/pipelinedeals/status/434085181889077249" target="_blank">In case you missed it, checkout these 3 tools to compliment your CRM http://t.co/ciaREDR8nv #sales</a>
 </li>
 <li>
-<a href="http://twitter.com/pipelinedeals/status/385430869399179264" target="_blank">Product Update: CSV Exports - Exporting Exactly What You Want http://t.co/0W6SjhXnHs #crm</a>
+<a href="http://twitter.com/pipelinedeals/status/433724790323412992" target="_blank">@lauriruhala We’re sorry you’ve experienced an error. We’re looking into it right now and will follow up with you personally via email.</a>
 </li>
 <li>
-<a href="http://twitter.com/pipelinedeals/status/384819450475581441" target="_blank">Personalized tours kickstart your PipelineDeals experience. Get an invite today! https://t.co/8vXhDPY985</a>
+<a href="http://twitter.com/pipelinedeals/status/433301355080339456" target="_blank">Meet @ForrestMoore206 –&nbsp;the latest addition to the @pipelinedeals team! https://t.co/2pu2guXGqs http://t.co/kMBV3qi9Rq</a>
 </li>
 <li>
-<a href="http://twitter.com/pipelinedeals/status/384755159101743104" target="_blank">60% of the deals in your sales pipeline will ultimately choose the status quo over you - http://t.co/ty8E173jJh via @jillkonrath</a>
+<a href="http://twitter.com/pipelinedeals/status/433256131171860481" target="_blank">@rubzie That's a good idea! We'll see about adding it to the tool tips for that page.</a>
 </li>
 </ul>
 
@@ -232,11 +237,11 @@ Enhanced List Views are here!
 <li><a href="https://www.pipelinedeals.com/terms">Terms of use</a></li>
 <li><a href="https://www.pipelinedeals.com/tour">Personalized Tours</a></li>
 </ul>
-<p class="copyright">© 2013 PipelineDeals. All rights reserved.</p>
+<p class="copyright">© 2014 PipelineDeals. All rights reserved.</p>
 </div>
 </div>
 <div class="footer-lower span12">
-<div class="span6 logo"><a href="/"><img alt="PipelineDeals footer logo" src="https://d2454splxac2m7.cloudfront.net/images/new_marketing_site/footer-logo.png?1380210226" style="height: 30px; width: 170px;"></a></div>
+<div class="span6 logo"><a href="/"><img alt="PipelineDeals footer logo" src="https://pipelinedeals.global.ssl.fastly.net/1392317705/images/marketing/footer-logo.png?1392318070" style="height: 30px; width: 170px;"></a></div>
 <div class="span6 usa">
 <h6>Made in the USA.</h6>
 </div>
@@ -244,7 +249,7 @@ Enhanced List Views are here!
 </div>
 </div>
 
-<script src="https://d2454splxac2m7.cloudfront.net/assets/new_marketing_site.js?1380810574" type="text/javascript"></script>
+<script src="https://pipelinedeals.global.ssl.fastly.net/1392317705/assets/marketing.js?1392318236" type="text/javascript"></script>
 <script type="text/javascript">
 adroll_adv_id = "TSSP3MY5MVCOZFKHK32NZM";
 adroll_pix_id = "BRTHHSDSZBF5XLUJV62SCI";
@@ -265,53 +270,24 @@ window.onload = function(){
 
 <!-- BEGIN GA -->
 <script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-137691-5']);
-  _gaq.push(['_setDomainName', 'pipelinedeals.com']);
-  _gaq.push(['_trackPageview']);
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+  ga('create', 'UA-137691-5', 'pipelinedeals.com');
+  ga('send', 'pageview');
+
+  
+  
+  
+  
+  
+  
+  
+  
 </script>
 <!-- END GA -->
-
-
-<!-- start Mixpanel -->
-<script type="text/javascript">
-  (function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
-  typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,
-  e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
-  mixpanel.init("43811e3c995856fef21be1f5df2e017c");
-
-  mixpanel.track_links('a.analytics-try-it', 'Clicked Try', {
-    url: 'https://www.pipelinedeals.com/privacy'
-  });
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-</script>
-<!-- end Mixpanel -->
-
 
 <!-- begin olark code --><script type="text/javascript">/*{literal}<![CDATA[*/window.olark||(function(i){var e=window,h=document,a=e.location.protocol=="https:"?"https:":"http:",g=i.name,b="load";(function(){e[g]=function(){(c.s=c.s||[]).push(arguments)};var c=e[g]._={},f=i.methods.length; while(f--){(function(j){e[g][j]=function(){e[g]("call",j,arguments)}})(i.methods[f])} c.l=i.loader;c.i=arguments.callee;c.f=setTimeout(function(){if(c.f){(new Image).src=a+"//"+c.l.replace(".js",".png")+"&"+escape(e.location.href)}c.f=null},20000);c.p={0:+new Date};c.P=function(j){c.p[j]=new Date-c.p[0]};function d(){c.P(b);e[g](b)}e.addEventListener?e.addEventListener(b,d,false):e.attachEvent("on"+b,d); (function(){function l(j){j="head";return["<",j,"></",j,"><",z,' onl'+'oad="var d=',B,";d.getElementsByTagName('head')[0].",y,"(d.",A,"('script')).",u,"='",a,"//",c.l,"'",'"',"></",z,">"].join("")}var z="body",s=h[z];if(!s){return setTimeout(arguments.callee,100)}c.P(1);var y="appendChild",A="createElement",u="src",r=h[A]("div"),G=r[y](h[A](g)),D=h[A]("iframe"),B="document",C="domain",q;r.style.display="none";s.insertBefore(r,s.firstChild).id=g;D.frameBorder="0";D.id=g+"-loader";if(/MSIE[ ]+6/.test(navigator.userAgent)){D.src="javascript:false"} D.allowTransparency="true";G[y](D);try{D.contentWindow[B].open()}catch(F){i[C]=h[C];q="javascript:var d="+B+".open();d.domain='"+h.domain+"';";D[u]=q+"void(0);"}try{var H=D.contentWindow[B];H.write(l());H.close()}catch(E){D[u]=q+'d.write("'+l().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}c.P(2)})()})()})({loader:(function(a){return "static.olark.com/jsclient/loader0.js?ts="+(a?a[1]:(+new Date))})(document.cookie.match(/olarkld=([0-9]+)/)),name:"olark",methods:["configure","extend","declare","identify"]});
   /* custom configuration goes here (www.olark.com/documentation) */
@@ -330,19 +306,9 @@ window.onload = function(){
   //]]>
 </script>
 
+
 <!-- Optimizely ab testing -->
 <script src="//cdn.optimizely.com/js/1873046.js"></script>
-<script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
-NREUMQ.push(["load",new Date().getTime()]);
-var e=document.createElement("script");
-e.type="text/javascript";
-e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "js-agent.newrelic.com/nr-100.js";
-document.body.appendChild(e);
-if(NREUMQ.a)NREUMQ.a();
-};
-NREUMQ.a=window.onload;window.onload=NREUMQ.f;
-};
-NREUMQ.push(["nrfj","beacon-1.newrelic.com","32d3c3b612","505055","JVlYFhNcD15WRxoNVxFpWwMTWAZGWltSPEEPQlNNEUEKRFJWTA==",0,75,new Date().getTime(),"","","","",""]);</script>
 
-<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
+
+<script src="https://js-agent.newrelic.com/nr-314.min.js"></script></body></html>
