--- a/b/bu/bus/businessinfoworld.com.html
+++ b/b/bu/bus/businessinfoworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the businessinfoworld.com privacy policy that was archived on 2013-08-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130824103411id_/http%3A//www.businessinfoworld.com/about/privacy-policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the businessinfoworld.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214004854id_/http%3A//businessinfoworld.com/about/privacy-policy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
