--- a/p/pr/pro/productsourcing.com.html
+++ b/p/pr/pro/productsourcing.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the productsourcing.com privacy policy that was archived on 2013-08-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130802052739id_/http%3A//www.productsourcing.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the productsourcing.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214004913id_/http%3A//www.productsourcing.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -11,9 +11,9 @@
 
 	
 
-	<link rel="stylesheet" type="text/css" href="http://static08.product-warehouse.com/style/productsourcing/global_v2-13.css">
-	<link rel="stylesheet" type="text/css" href="http://static09.product-warehouse.com/style/productsourcing/print-10.css" media="print">
-	<script async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/site/scripts/ss-11.js"></script>
+	<link rel="stylesheet" type="text/css" href="http://static06.product-warehouse.com/style/productsourcing/global_v2-3203f371.css">
+	<link rel="stylesheet" type="text/css" href="http://static06.product-warehouse.com/style/productsourcing/print-00000001.css" media="print">
+	<script async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/site/scripts/ss-2a31731d.js"></script>
 
 	    <script language="javascript" type="text/javascript">
 	
@@ -139,14 +139,14 @@
                 <li class="last"><a href="/sitemap.html">Site Map</a></li>
             </ul>
 			<div class="clear">&nbsp;</div>
-			<div id="copyright">© 2013 &nbsp; ProductSourcing.com<sup>™</sup></div>
+			<div id="copyright">© 2014 &nbsp; ProductSourcing.com<sup>™</sup></div>
 			<div id="footer_bg_right">&nbsp;</div>
 			<div id="footer_bg_left">&nbsp;</div>
 		</div>
 	</div>
 </div>
 
-<script src="/site/scripts/s_code-9.js"></script><script src="/site/scripts/s_convert-7.js"></script>
+<script src="/site/scripts/s_code-58e3ffad.js"></script><script src="/site/scripts/s_convert-37f0592a.js"></script>
 <!-- SiteCatalyst code version: H.19.4. Copyright 1997-2009 Omniture, Inc. More info available at http://www.omniture.com -->
 <script language="JavaScript" type="text/javascript">
 <!--
@@ -191,7 +191,7 @@ if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+
   s.parentNode.insertBefore(g, s);
  })(document, 'script');
 </script>
-<script type="text/javascript" src="https://px.steelhousemedia.com/st?aid=9201&amp;cb=1224229353797872"></script><script type="text/javascript">
+<script type="text/javascript" src="https://px.steelhousemedia.com/st?aid=9201&amp;cb=2415997036183679"></script><script type="text/javascript">
 	// TRACKING PIXEL
 	var aid='9201';
 	var additional = ''; // add additional arguments here. please start off with '&'
